...
import pt.ipc_app.service.utils.ProblemJson
import pt.ipc_app.ui.components.ProgressState
import pt.ipc_app.ui.components.CircularButton
import pt.ipc_app.ui.components.RegisterUser
import pt.ipc_app.ui.theme.*

const val RegisterPhysiotherapistScreenTag = "RegisterPhysiotherapistScreen"

@Composable
fun RegisterPhysiotherapistScreen(
    progressState: ProgressState = ProgressState.IDLE,
    error: ProblemJson? = null,
    onSaveRequest: (Physiotherapist) -> Unit
...
