...
import pt.ipc_app.domain.user.User
import pt.ipc_app.service.utils.ProblemJson
import pt.ipc_app.ui.components.*
import pt.ipc_app.ui.components.TextFieldType
import pt.ipc_app.ui.theme.*

const val RegisterPatientScreenTag = "RegisterPatientScreen"

private const val WEIGHT_METRIC = " kg"
private const val HEIGHT_METRIC = " cm"

@Composable
fun RegisterPatientScreen(
...
