...
import pt.ipc_app.domain.user.User
import pt.ipc_app.ui.components.TextFieldType
import pt.ipc_app.ui.components.*
import pt.ipc_app.ui.components.ScreenHeader
import pt.ipc_app.ui.theme.*

const val LoginScreenTag = "LoginScreen"

@Composable
fun LoginScreen(
    progressState: ProgressState = ProgressState.IDLE,
    onSaveRequest: (email: String, password: String) -> Unit = { _,_ -> }
) {
...
